deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrt
  namespace: scrt
spec:
  selector:
    app: scrt
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
